test/semantic_errors/invalid_arrayindex3.mc
void main() {
    int a;
    int b;
    b = a[0]; /* cannot use indexing on non-array */
}